# MiniSAPR

./: .gitignore  001.sapr  12.sapr  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  empty.sapr  test.sapr
.github/workflows/: qt_windows.yml
src/app/: CMakeLists.txt  Makefile  cmake_install.cmake  filehandler.cpp  filehandler.h  main.cpp  mini_sapr  rodsystemcalculator.cpp  rodsystemcalculator.h  sapr.cpp  sapr.h  sapr.ui  schemawidget.cpp  schemawidget.h
src/app/mini_sapr_autogen/: deps  mocs_compilation.cpp
src/app/mini_sapr_autogen/EWIEGA46WW/: moc_sapr.cpp  moc_sapr.cpp.d  moc_schemawidget.cpp  moc_schemawidget.cpp.d
src/app/mini_sapr_autogen/include/: ui_sapr.h
tests/: ONE.sapr  test.sapr  Контрольная.sapr
tests/Задачи 1-6/: Test1.sapr  Test2.sapr  Test3.sapr  Test4.sapr  Test5.sapr  Test6.sapr
tests/Простые задачи/: Test1.sapr  Test2.sapr  Test3.sapr  Test4.sapr  Test5.sapr
